--- a/index.css
+++ b/index.css
@@ -11,6 +11,13 @@ header{
 section{
     background-color: rgba(200, 200, 200, 0.5);
 }
+#HOME p{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 40%;
+    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
+}
 .menu-nav{
     position: fixed;
     z-index: 10;
@@ -78,12 +85,7 @@ h1{
 }
 .profile p {
     position: absolute;
-    font-size: 1.5rem;
-    margin-top: 250px;
-    width: 74%;
     z-index: 0;
-    text-align: right;
-
 }
 
 #ABOUT ul {
@@ -181,12 +183,20 @@ h1{
         height: 45px;
     }
     #ABOUT .profile h2{
-        margin-top: 150px;
-        width: 73%;
+        display: inline-block;
+        margin-top: 200px;
         position: absolute;
         z-index: 0;
         font-size: 2rem;
-        text-align: right;
+    }
+    .profile p {
+        margin-top: 350px;
+        text-align: center;
+        font-size: 2rem;
+        display: inline-block;
+        font-size: 1.8rem;
+        right: 30%;
+        bottom: -450px;
     }
     .ikon{
         border: double 7px rgba(100, 100, 100, 0.5);
@@ -235,6 +245,12 @@ h1{
         position: absolute;
         z-index: 0;
         font-size: 1.5rem;
+    }
+    .profile p {
+          margin-top: 400px;
+          text-align: center;
+          width: 100%;
+          font-size: 1rem;
     }
     .ikon{
         border: double 7px rgba(100, 100, 100, 0.5);
