--- a/index.css
+++ b/index.css
@@ -3,20 +3,13 @@
     padding: 0;
     font-family: 'DM Serif Display', serif;
 }
-
-header{
-    height: 100vh;
-    background-color: rgba(200, 200, 200, 0.5);
+h1,h2{
+    text-align: center;
+    position: relative;
 }
 section{
+    height: 100vh;
     background-color: rgba(200, 200, 200, 0.5);
-}
-#HOME p{
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    top: 40%;
-    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
 }
 .menu-nav{
     position: fixed;
@@ -53,71 +46,75 @@ section{
 .menu-nav2 ul li a{
     color: #000;
 }
-#b_box{
-    position: absolute;
-    z-index: -1;
-    background-color: rgba(100, 100, 100, 0.5);
-    height: 60%;
-    width: 100%;
-    margin-top: 10rem;
-}
-
-h1{
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    top: 45%;
-    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0,
-    -5px 5px 5px #ffffffd0,  5px -5px 5px #ffffffd0,
-     5px 0px 5px #ffffffd0, -5px -0px 5px #ffffffd0,
-     0px 5px 5px #ffffffd0,  0px -5px 5px #ffffffd0;
-}
-#ABOUT{
+#home{
     height: 100vh;
 }
-#ABOUT h2{
+#home .home-text{
+    padding-top: 290px;
+}
+#home h1{
+    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
+}
+#home h2{
+    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
+}
+.b_box{
     position: absolute;
-    z-index: 0;
-    margin: 0;
-    padding-top: 2.5rem;
+    margin-top: 10rem;
+    z-index: -1;
+    width: 100%;
+    height: 60%;
+    background-color: #777777;
+}
+#b_box1{
+    background-color: rgba(200, 200, 200, 0.5);
+    width: 80%;
+    margin-left: 10%;
+    
+}
+#about{
+    height: 100vh;
+    padding-top: 80px;
+}
+#about h2{
+    margin-top: -40px;
+    position: absolute;
     text-align: center;
     width: 100%;
 }
-.profile{
-    display: flex;
-    position: absolute;
-}
-.profile text {
-    position: absolute;
-    z-index: 0;
-}
 
-#ABOUT ul {
-    position: absolute;
+footer ul {
     list-style: none;
     display: flex;
-    gap: 30px;
+    gap: 70px;
     justify-content: center;
-    top: 180%;
-    width: 100%;
   }
-#ABOUT ul li a {
+  footer ul li a {
     display: inline-block;
+    width: 56px;
+    height: 56px;
+    padding-bottom: 30px;
     border-radius: 8px;
     transition: all 0.3s;
   }
-#ABOUT ul li a svg {
+  footer ul li a svg {
     fill: var(--light-100) !important;
+    width: 50px;
+    height: 50px;
   }
-#ABOUT ul li.insta a:hover, 
-#ABOUT ul li.insta a:active {
+  footer ul li.insta a:hover, 
+  footer ul li.insta a:active {
     background: linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
   }
-#ABOUT ul li.fb a:hover,
-#ABOUT ul li.fb a:active {
+  footer ul li.fb a:hover,
+  footer ul li.fb a:active {
     background: #3b5998;
   }
-#ABOUT a img{
+  footer .bottom {
+    margin: 1.5rem;
+    text-align: center;
+  }
+  footer a img{
     position: fixed;
     right: 5px;
     bottom: 20px;
@@ -127,179 +124,142 @@ h1{
     justify-content: right;
     flex-direction: column;
   }
-#WORKS{
-    height: 100vh;
+#about a img{
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
+    height: 75px;
+    z-index: 9999; /*重なりを調整*/
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
+  }
+#about .profile  .ikon img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border: double 7px rgba(100, 100, 100, 0.5);
+    border-radius: 20px;
 }
-#WORKS h2{
+#about .profile{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    justify-content: center;
+}
+#about .profile .name{
+    display: flex;
+    margin-bottom: 50px;
+    align-items:flex-end;
+    gap: 50px;
+}
+
+ /*少しずらしたボックス*/
+#about .profile-text{
+    margin: 2em 0;
+    padding:2em;/*内側余白*/
+    background:linear-gradient(-45deg,transparent 25%,#f2f3f4 25%,#f2f3f4 50%,transparent 50%,transparent 75%,#f2f3f4 75%,#f2f3f4);
+    background-size: 4px 4px;
+    border-bottom: 4px double rgba(100, 100, 100, 0.5);
+    border-top: 4px double rgba(100, 100, 100, 0.5);
+    background-clip: padding-box;
+}
+#about .profile-text p{
+    font-size: 2rem;
+}
+#works{
+    height: 220vh;
+    padding-top: 80px;
+}
+
+#works h2{
+    margin-top: -40px;
     position: absolute;
-    z-index: 0;
-    margin: 0;
-    padding-top: 2.5rem;
     text-align: center;
     width: 100%;
 }
-#SKILLS{
-    height: 100vh;
+.work .img1{
+    display: flex;
+    gap: 200px;
 }
-#SKILLS h2{
+.work .ag2video{
+    display: flex;
+    gap: 200px;
+}
+.work a{
+    list-style: none;
+    text-decoration: none;
+    color: #000;
+   font-weight: bold;
+   margin-top: 23%;
+}
+.work img{
+    margin-top: 80px;
+    width: 670px;
+    height: 400px;
+    object-fit: none;
+    border: double 7px rgba(100, 100, 100, 0.5);
+    margin-bottom: 80px;
+
+}
+#work .video2{
+    margin-left: 0;
+}
+.ag2video{
+    width: 670px;
+    margin-bottom: 80px;
+}
+.work video{
+    border: double 7px rgba(100, 100, 100, 0.5);
+}
+#skills{
+    padding-top: 80px;
+    height: 158vh;
+}
+
+#skills p{
+    font-size: 0.6em;
+}
+#skills h2{
+    margin-top: -40px;
     position: absolute;
-    z-index: 0;
-    margin: 0;
-    padding-top: 2.5rem;
     text-align: center;
     width: 100%;
 }
-#SKILLS .skill-1{
+#skills h3{
+    border-left:5px solid #000000; /*線の設定*/
+    padding:2px 8px; /*余白の設定*/
+}
+#skills .skill-1 .skill1 h3,.skill4 h3{
+    width: 220px;
+    border-left:5px solid #000000; /*線の設定*/
+    padding:2px 8px; /*余白の設定*/
+}
+#skills .skill-1,.skill-2{
+    width: 600px;
+    margin : 0 auto;
     display: flex;
-    position: absolute;
-    width: 200px;
-    gap: 0px;
+    gap: 160px;
 }
-#SKILLS .skill-1 img{
-    width: 200px;
-    height: 100px;
-    object-fit: cover;
-}
-#SKILLS .skill-2{
-    display: flex;
-    position: absolute;
-    width: 200px;
-}
-#SKILLS .skill-2 img{
-    width: 200px;
-    height: 100px;
-    object-fit: cover;
-}
-#SKILLS .skill-3{
-    position: absolute;
-}
-#SKILLS .skill-3 img{
-    width: 100px;
-    height: 100px;
+#skills img{
+    width: 150px;
+    height: 150px;
+    margin-top: 50px;
+    margin-left: 40px;
     object-fit: cover;
 }
 .copyright{
-    position: absolute;
     text-align: center;
-    width: 100%;
-    font-size: small;
-    z-index: 1;
+    margin-top: 40px;
 }
-#b_box1{
-    position: absolute;
-    z-index: -1;
-    background-color: rgba(100, 100, 100, 0.5);
-    height: 82%;
-    width: 76%;
-    left: 12%;
-    margin-top: 4.2rem;
-}
-
 @media (min-width: 481px){
     body{
         font-size: 2.5rem;
-    }
-    #ABOUT h2{
-        font-size: 3rem;
-    }
-    #WORKS h2{
-        font-size: 3rem;
-    }
-    #SKILLS h2{
-        font-size: 3rem;
-    }
-    .copyright{
-        bottom: -2280px;
-    }
-    #ABOUT ul li a svg{
-        width: 75px;
-        height: 45px;
-    }
-    #ABOUT .profile h2{
-        display: inline-block;
-        margin-top: 200px;
-        position: absolute;
-        z-index: 0;
-        font-size: 2rem;
-    }
-    .profile text{
-        margin-top: 350px;
-        text-align: center;
-        font-size: 2rem;
-        display: inline-block;
-        font-size: 1.8rem;
-        right: 30%;
-        bottom: -450px;
-    }
-    .ikon{
-        border: double 7px rgba(100, 100, 100, 0.5);
-        position: absolute;
-        width: 250px;
-        height: 250px;
-        object-fit: cover;
-        border-radius: 20px;
-        left: 20%;
-        margin-top: 200px;
-    }
-    .ikon img{
-        position: absolute;
-        width: 250px;
-        height: 250px;
-        object-fit: cover;
-        border-radius: 13px;
     }
 }
 @media (max-width: 480px){
     body{
         font-size: 2rem;
-    }
-    #ABOUT h2{
-        font-size: 2.5rem;
-    }
-    #WORKS h2{
-        font-size: 2.5rem;
-    }
-    #SKILLS h2{
-        font-size: 2.5rem;
-    }
-    .copyright{
-        bottom: -2030px;
-    }
-    h1{
-        font-size: 50px;
-        top: 50%;
-    }
-    #ABOUT ul li a svg{
-        width: 60px;
-        height: 35px;
-    }
-    #ABOUT .profile h2{
-        margin-top: 290px;
-        position: absolute;
-        z-index: 0;
-        font-size: 1.5rem;
-    }
-    .profile text {
-          margin-top: 400px;
-          text-align: center;
-          width: 100%;
-          font-size: 1rem;
-    }
-    .ikon{
-        border: double 7px rgba(100, 100, 100, 0.5);
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
-        border-radius: 20px;
-        left: 27.7%;
-        margin-top: 100px;
-    }
-    .ikon img{
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
-        border-radius: 13px;
     }
 }
