--- a/index1.css
+++ b/index1.css
@@ -83,30 +83,46 @@ section{
     width: 100%;
 }
 
-#about .sns ul {
-    position: absolute;
+footer ul {
     list-style: none;
     display: flex;
-    gap: 30px;
+    gap: 70px;
     justify-content: center;
-    top: 180%;
-    width: 100%;
   }
-#about .sns ul li a {
+  footer ul li a {
     display: inline-block;
+    width: 56px;
+    height: 56px;
+    padding-bottom: 30px;
     border-radius: 8px;
     transition: all 0.3s;
   }
-#about .sns ul li a svg {
+  footer ul li a svg {
     fill: var(--light-100) !important;
+    width: 50px;
+    height: 50px;
   }
-#about .sns ul li.insta a:hover, 
-#about .sns ul li.insta a:active {
+  footer ul li.insta a:hover, 
+  footer ul li.insta a:active {
     background: linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
   }
-#about .sns ul li.fb a:hover,
-#about .snsul li.fb a:active {
+  footer ul li.fb a:hover,
+  footer ul li.fb a:active {
     background: #3b5998;
+  }
+  footer .bottom {
+    margin: 1.5rem;
+    text-align: center;
+  }
+  footer a img{
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
+    height: 75px;
+    z-index: 9999; /*重なりを調整*/
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
   }
 #about a img{
     position: fixed;
