--- a/index.css
+++ b/index.css
@@ -10,6 +10,270 @@ h1,h2{
 section{
     height: 100vh;
     background-color: rgba(200, 200, 200, 0.5);
+}a*{
+    margin: 0;
+    padding: 0;
+    font-family: 'DM Serif Display', serif;
+}
+h1,h2{
+    text-align: center;
+    position: relative;
+}
+section{
+    height: 100vh;
+    background-color: rgba(200, 200, 200, 0.5);
+}
+.menu-nav{
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+}
+.menu-nav ul{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    padding: 10px 20px;
+}
+.menu-nav ul li{
+    list-style: none;
+}
+.menu-nav ul li a{
+    color: #000;
+}
+.menu-nav2{
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    bottom: 0;
+}
+.menu-nav2 ul{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    padding: 10px 20px;
+}
+.menu-nav2 ul li{
+    list-style: none;
+}
+.menu-nav2 ul li a{
+    color: #000;
+}
+#home{
+    height: 100vh;
+}
+#home .home-text{
+    padding-top: 290px;
+}
+#home h1{
+    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
+}
+#home h2{
+    text-shadow: 5px 5px 5px #ffffffd0, -5px -5px 5px #ffffffd0, -5px 5px 5px #ffffffd0, 5px -5px 5px #ffffffd0, 5px 0px 5px #ffffffd0, -5px 0px 5px #ffffffd0, 0px 5px 5px #ffffffd0, 0px -5px 5px #ffffffd0;
+}
+.b_box{
+    position: absolute;
+    margin-top: 10rem;
+    z-index: -1;
+    width: 100%;
+    height: 60%;
+    background-color: #777777;
+}
+#b_box1{
+    background-color: rgba(200, 200, 200, 0.5);
+    width: 80%;
+    margin-left: 10%;
+    
+}
+#about{
+    height: 100vh;
+    padding-top: 80px;
+}
+#about h2{
+    margin-top: -40px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    gap: 70px;
+    justify-content: center;
+  }
+  footer ul li a {
+    display: inline-block;
+    width: 56px;
+    height: 56px;
+    padding-bottom: 30px;
+    border-radius: 8px;
+    transition: all 0.3s;
+  }
+  footer ul li a svg {
+    fill: var(--light-100) !important;
+    width: 50px;
+    height: 50px;
+  }
+  footer ul li.insta a:hover, 
+  footer ul li.insta a:active {
+    background: linear-gradient(135deg, #427eff 0%, #f13f79 70%) no-repeat;
+  }
+  footer ul li.fb a:hover,
+  footer ul li.fb a:active {
+    background: #3b5998;
+  }
+  footer .bottom {
+    margin: 1.5rem;
+    text-align: center;
+  }
+  footer a img{
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
+    height: 75px;
+    z-index: 9999; /*重なりを調整*/
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
+  }
+#about a img{
+    position: fixed;
+    right: 5px;
+    bottom: 20px;
+    height: 75px;
+    z-index: 9999; /*重なりを調整*/
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
+  }
+#about .profile  .ikon img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border: double 7px rgba(100, 100, 100, 0.5);
+    border-radius: 20px;
+}
+#about .profile{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    justify-content: center;
+}
+#about .profile .name{
+    display: flex;
+    margin-bottom: 50px;
+    align-items:flex-end;
+    gap: 50px;
+}
+
+ /*少しずらしたボックス*/
+#about .profile-text{
+    margin: 2em 0;
+    padding:2em;/*内側余白*/
+    background:linear-gradient(-45deg,transparent 25%,#f2f3f4 25%,#f2f3f4 50%,transparent 50%,transparent 75%,#f2f3f4 75%,#f2f3f4);
+    background-size: 4px 4px;
+    border-bottom: 4px double rgba(100, 100, 100, 0.5);
+    border-top: 4px double rgba(100, 100, 100, 0.5);
+    background-clip: padding-box;
+}
+#about .profile-text p{
+    font-size: 2rem;
+}
+#works{
+    height: 220vh;
+    padding-top: 80px;
+}
+
+#works h2{
+    margin-top: -40px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+.work .img1{
+    display: flex;
+    gap: 200px;
+}
+.work .ag2video{
+    display: flex;
+    gap: 200px;
+}
+.work a{
+    list-style: none;
+    text-decoration: none;
+    color: #000;
+   font-weight: bold;
+   margin-top: 23%;
+}
+.work img{
+    margin-top: 80px;
+    width: 670px;
+    height: 400px;
+    object-fit: none;
+    border: double 7px rgba(100, 100, 100, 0.5);
+    margin-bottom: 80px;
+
+}
+#work .video2{
+    margin-left: 0;
+}
+.ag2video{
+    width: 670px;
+    margin-bottom: 80px;
+}
+.work video{
+    border: double 7px rgba(100, 100, 100, 0.5);
+}
+#skills{
+    padding-top: 80px;
+    height: 158vh;
+}
+
+#skills p{
+    font-size: 0.6em;
+}
+#skills h2{
+    margin-top: -40px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+#skills h3{
+    border-left:5px solid #000000; /*線の設定*/
+    padding:2px 8px; /*余白の設定*/
+}
+#skills .skill-1 .skill1 h3,.skill4 h3{
+    width: 220px;
+    border-left:5px solid #000000; /*線の設定*/
+    padding:2px 8px; /*余白の設定*/
+}
+#skills .skill-1,.skill-2{
+    width: 600px;
+    margin : 0 auto;
+    display: flex;
+    gap: 160px;
+}
+#skills img{
+    width: 150px;
+    height: 150px;
+    margin-top: 50px;
+    margin-left: 40px;
+    object-fit: cover;
+}
+.copyright{
+    text-align: center;
+    margin-top: 40px;
+}
+@media (min-width: 481px){
+    body{
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 480px){
+    body{
+        font-size: 2rem;
+    }
 }
 .menu-nav{
     position: fixed;
